Correct the alignment between icon, separator and link text
the alignment was corrected between icon,
separator and the link text so that each item
stays in equal spacing between each other in the
same line. It was done in the sidebar section of
the exercise.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -67,7 +67,22 @@ a {
   text-decoration: none;
   color: #fff;
   font-size: 24px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
+
+.link-icon {
+  font-size: 16px;
+  display: inline-block;
+  width: 20px;
+}
+
+.separator {
+  text-align: center;
+  width: 10px;
+}
+
 
 
 .card-container {
